add findGamesByTeam endpoint
