# src/api/components/game/game.routes.js
@@ -4,6 +4,7 @@ const gameController = require('./game.controller')
 
 gameRoutes.get('/season/:season/week/:week', gameController.findGames)
 gameRoutes.get('/week/:week', gameController.findGamesByWeek)
+gameRoutes.get('/team/:team', gameController.findGamesByTeam)
 gameRoutes.get('/scores/season/:season/week/:week', gameController.playGames)
 
 module.exports = gameRoutes
